recursion.cons.butlast.ButLast.scala.error
Erreur de compilation :
ButLast:4: error: not found: value head
  return head::butLast(l.tail);
         ^