recursion.cons.butlast.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
	if (l.tail == Nil) return Nil;
  return head::butLast(l.tail);
}